horizontal scroll stopped

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     max-width: 100%;
     overflow-x: hidden;
     font-family: "Montserrat", sans-serif;
